kube/api-composer-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-composer
  labels: 
    app: api-composer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-composer
  template:
    metadata:
      labels:
        app: api-composer
    spec:
      containers:
        - name: api-composer
          image: earthakkharawat/api-composer:latest
          ports:
            - containerPort: 8000
          
---
apiVersion: v1
kind: Service
metadata:
  name: api-composer
spec:
  selector:
    app: api-composer
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  # type: NodePort
