kube/department-store-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: department-store
  labels: 
    app: department-store
spec:
  replicas: 1
  selector:
    matchLabels:
      app: department-store
  template:
    metadata:
      labels:
        app: department-store
    spec:
      containers:
        - name: department-store
          image: earthakkharawat/department-store:latest
          ports:
            - containerPort: 8001

---
apiVersion: v1
kind: Service
metadata:
  name: department-store
spec:
  selector:
    app: department-store
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8001
  # type: NodePort
