kube/job-position-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: job-position
  labels: 
    app: job-position
spec:
  replicas: 1
  selector:
    matchLabels:
      app: job-position
  template:
    metadata:
      labels:
        app: job-position
    spec:
      containers:
        - name: job-position
          image: earthakkharawat/job-position:latest
          ports:
            - containerPort: 8002

---
apiVersion: v1
kind: Service
metadata:
  name: job-position
spec:
  selector:
    app: job-position
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8002
  # type: NodePort
