kube/parking-deploymeny.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: parking
  labels: 
    app: parking
spec:
  replicas: 1
  selector:
    matchLabels:
      app: parking
  template:
    metadata:
      labels:
        app: parking
    spec:
      containers:
        - name: parking
          image: earthakkharawat/parking:latest
          ports:
            - containerPort: 8003

---
apiVersion: v1
kind: Service
metadata:
  name: parking
spec:
  selector:
    app: parking
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8003
  # type: NodePort
